tests/fixtures/rbi_no_proto.out
error: Definitions in .rbi files must contain type annotations

        @ __ROOT__/tests/fixtures/rbi_no_proto.rbi:1
      1 |  def untyped(x)
                      ^^^ here

error: Definitions in .rbi files must contain type annotations

        @ __ROOT__/tests/fixtures/rbi_no_proto.rbi:4
      4 |  def no_arg
               ^^^^^^ here
